# Maxima-WI

./: .ghci  ChangeLog.md  Contributors.md  Main.hs  Maxima-WI.cabal  Maxima.hs  Mcommands.hs  Mcommlist.hs  Mconsole.hs  README.md  Util.hs  all-maxima-commands.txt  default.nix  first-web-app.hs  release0.nix  stack.yaml
