name:                Maxima-WI

version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Server providing HTTP access to Maxima-CAS

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             GPL-3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Comet 314

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          alex@thebest

-- A copyright notice.
-- copyright:           

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  ChangeLog.md
extra-source-files:  first-web-app.hs

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable Maxima-WI
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  other-modules:       Maxima,
                       Util
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    LambdaCase, MultiWayIf
  
  -- Other library packages from which modules are imported.
  build-depends:       aeson-compat >= 0.3.5.1,
                       attoparsec >=0.13 && <0.14,
                       base >=4.9 && <4.10,
                       base-compat >= 0.9.1,
                       bytestring >=0.10 && <0.11,
                       extra >=1.4 && <1.5,
                       http-media >= 0.6.4,
                       lucid >= 2.9.5,
                       mtl >= 2.2.1,
                       network >=2.6 && <2.7,
                       process >=1.4 && <1.5,
                       servant-server >= 0.7 && < 0.9,
                       string-conversions >= 0.4,
                       texmath >=0.8 && <0.9,
                       text >= 1.2.2.1,
                       unix >=2.7 && <2.8,
                       wai >= 3.2.1.1,
                       warp >= 3.2.7,
                       xml >= 1.3.14
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
