name:                Maxima-WI
version:             0.1.0.0
synopsis:            Server providing HTTP access to Maxima-CAS
description:         Maxima extension tools
license:             GPL-3
license-file:        LICENSE
author:              Alexander 31415926535
maintainer:          alex@thebest
copyright:           Alexander Kubelskyi, Danylo Hlynskyi
category:            Web
build-type:          Simple

extra-source-files:  ChangeLog.md
extra-source-files:  README.md
extra-source-files:  first-web-app.hs
extra-source-files:  Mcommands.hs
extra-source-files:  Mcommlist.hs

cabal-version:       >=1.10


executable maxima-wi
  main-is:             Main.hs
  other-modules:       Maxima,
                       Util
  other-extensions:    LambdaCase, MultiWayIf
  build-depends:       aeson-compat >= 0.3.5.1,
                       attoparsec >=0.13 && <0.14,
                       base >=4.9 && <4.10,
                       base-compat >= 0.9.1,
                       bytestring >=0.10 && <0.11,
                       extra >=1.4 && <1.5,
                       haskeline >= 0.7.2.3 && <0.7.3.0,
                       http-media >= 0.6.4,
                       lucid >= 2.9.5,
                       mtl >= 2.2.1,
                       network >=2.6 && <2.7,
                       process >=1.4 && <1.5,
                       servant-server >= 0.7 && < 0.9,
                       string-conversions >= 0.4,
                       texmath >=0.8 && <0.9,
                       text >= 1.2.2.1,
                       unix >=2.7 && <2.8,
                       wai >= 3.2.1.1,
                       warp >= 3.2.7,
                       xml >= 1.3.14
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  default-language:    Haskell2010


executable mconsole
  main-is:             Mconsole.hs
  other-modules:       Maxima,
                       Util,
                       Mcommlist
  other-extensions:    LambdaCase, MultiWayIf
  build-depends:       aeson-compat >= 0.3.5.1,
                       attoparsec >=0.13 && <0.14,
                       base >=4.9 && <4.10,
                       base-compat >= 0.9.1,
                       bytestring >=0.10 && <0.11,
                       extra >=1.4 && <1.5,
                       haskeline >= 0.7.2.3 && <0.7.3.0,
                       http-media >= 0.6.4,
                       lucid >= 2.9.5,
                       mtl >= 2.2.1,
                       network >=2.6 && <2.7,
                       process >=1.4 && <1.5,
                       servant-server >= 0.7 && < 0.9,
                       string-conversions >= 0.4,
                       texmath >=0.8 && <0.9,
                       text >= 1.2.2.1,
                       unix >=2.7 && <2.8,
                       wai >= 3.2.1.1,
                       warp >= 3.2.7,
                       xml >= 1.3.14
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  default-language:    Haskell2010
      
